<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">resellers</string>
    <string name="email_address_edit_text">Email address</string>
    <string name="password_edit_text">Password</string>
    <string name="app_logo_dsc">app_logo</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="did_you_forget_your_password">Forget password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up_now">Sign up Now !</string>
    <string name="or">OR</string>
    <string name="sign_in_with_social">Sign in with Social</string>
    <string name="choose_your_position">Account Type</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up with Email</string>
    <string name="sign_up_with_social">Sign up with Social</string>
    <string name="branch_uid">Branch UID</string>
    <string name="confirm">Confirm</string>
    <string name="company_id_helper_text">Call your Manager or HR for this UID</string>
    <string name="hr_helper_text">Call your Manager to get Company Id</string>
    <string name="hr_pin_code_helper">Please type your pin code</string>
    <string name="hr_pin_code_hint">HR PIN code</string>
    <string name="slogan">An Easy, Smart Sales teams and Customers Control System</string>
    <string name="google_logo">google_logo</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="logo_image">logo_image</string>
    <string name="continue_btn">Continue</string>
    <string name="it_seems_this_your_first_time_using_easyhr_app_please_specify_your_position_and_all_information_needed">It Seems this your first time using EasyHR app, Please Specify your position and all information needed.</string>
    <string name="please_type_company_name">Please type your Company name</string>
    <string name="company_name">Company</string>
    <string name="password_min_6_characters">Password (min. 6 characters)</string>
    <string name="create_new_account">Create an account</string>
    <string name="i_already_have_account">I already have an account</string>
    <string name="blank_email_error">your e address can\'t be blank</string>
    <string name="valid_email_address_error">Please type valid e address</string>
    <string name="blank_password_error">your password can\'t be blank</string>
    <string name="mini_chars_password_error">Password minimum length is 6 characters</string>
    <string name="blank_user_name_error">your name can\'t be blank</string>
    <string name="spacial_chars_error">your name should not contain any spacial characters</string>
    <string name="com_id_spacial_chars_error">Company Id should not contain any spacial characters</string>
    <string name="blank_company_name_error">Company name can\'t be blank</string>
    <string name="blank_company_id_error">Company Id can\'t be blank</string>
    <string name="blank_pib_code_error">branch pin code can\'t be blank</string>
    <string name="valid_pin_code_error">please type valid pin code</string>
    <string name="we_sent_you_email_msg">In order to continue you have to Verify your e address, We sent you a verification e, Please check your inbox.</string>
    <string name="email_verification_title">Email Verification</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="create_account">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="change_email">Change Email</string>
    <string name="please_select_your_position">Please Select your account type and enter the needed information in order to continue.</string>
    <string name="select_your_position">Select account type!</string>
    <string name="name_helper_text">Please Type your personal name</string>
    <string name="did_not_receive_email">Did not Receive Email? </string>
    <string name="resend_email">Resend Email!</string>
    <string name="facebook_app_id">1793010957498128</string>
    <string name="fb_login_protocol_scheme">fb1793010957498128</string>
    <string name="signing_up">Signing up</string>
    <string name="signing_in">Signing in</string>
    <string name="error_logo">error_logo</string>
    <string name="error">Error</string>
    <string name="forget_password_title">Forget password?</string>
    <string name="forget_password_message">No problem, Enter your email address and we\'ll send you a link to change your password.</string>
    <string name="send_email">Send Email</string>
    <string name="company_home">Home</string>
    <string name="company_activities">Activities</string>
    <string name="company_my_profile">My Profile</string>
    <string name="overview">Overview</string>
    <string name="chart_label">Last 7 Days Total Customers Counter For All Branches</string>
    <string name="open_branch_details">open branch details</string>
    <string name="branch_name">Branch Name</string>
    <string name="type_your_new_branch_name_and_then_press_add_button">Type your new branch name and then press add button.</string>
    <string name="add_new_branch">New Branch</string>
    <string name="branches_list">Branches List</string>
    <string name="sales_member_list">Sales members</string>
    <string name="customers_log">Customers Log</string>
    <string name="customer_photo">Customer photo</string>
    <string name="edit_customer_info">Edit Customer Info</string>
    <string name="customer_name">Customer name</string>
    <string name="customer_email">Email</string>
    <string name="phone">Phone</string>
    <string name="added_time">Added time</string>
    <string name="google_maps_key" translatable="false">AIzaSyABpiW13-2gPYkgXVyzFypJTQIW1me4Y1s</string>
    <string name="company_uid">Company UID</string>
    <string name="edit_company_info">Edit Company Info</string>
    <string name="drawer_user_image_disc">sales_user_image</string>
    <string name="home">Home</string>
    <string name="personal_page">Profile</string>
    <string name="settings">Settings</string>
    <string name="my_branch">My Branch</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="sign_out">Sign out</string>
    <string name="exit">Exit</string>
    <string name="nav_drawer_open">nav_open</string>
    <string name="nav_drawer_closed">nav_closed</string>
    <string name="type_the_new_customer_information_then_press_continue">Type the new customer information then press continue.</string>
    <string name="notes">Notes....</string>
    <string name="add_customer">Add customer</string>
    <string name="user_photo">user photo</string>
    <string name="personal_photo">personal photo</string>
    <string name="customer_notes">Note</string>
    <string name="call_customer_phone_number">call customer phone number</string>
    <string name="search">Search</string>
    <string name="branch_info">Branch information</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="branch_qr_code">Branch Qr-Code</string>
    <string name="branch_qrcode">Branch QRCode</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="done">Done</string>
    <string name="scan_your_branch_qr_code">Scan your branch QR-Code</string>
    <string name="new_customer_label">new customer label</string>
    <string name="select_the_customer_then_press_add_new_visit">Select the customer then press add new Visit.</string>
    <string name="new_visit">New Visit</string>
    <string name="Choose_customer">Choose Customer</string>
    <string name="add_notes">Add Notes…</string>
    <string name="add_visit">Add Visit</string>
    <string name="new_customer">New Customer</string>
    <string name="my_customers">My Customers</string>
    <string name="not_defined">Not Defined</string>
    <string name="cancel">Cancel</string>
    <string name="customer_image">customer image</string>
    <string name="visits_log_sub_title">Visits Log</string>
    <string name="visits_log">Visits</string>
    <string name="sales_info">Sales Man Information</string>
    <string name="sales_man_customers_list">Sales man customers list</string>
    <string name="sales_photo">Sales man photo</string>
    <string name="salesman_name">Name</string>
    <string name="sales_uid">UID</string>
    <string name="sales_qrcode">Salesman QR-Code</string>
    <string name="sales_qr_code">Salesman qr-code</string>
    <string name="please_type_company_uid">Please type your company UID</string>
    <string name="add_customer_fab">Add Customer</string>
    <string name="add_visit_fab">Add Visit</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="my_location">my location</string>
    <string name="create_new_account_progress_bar_text">Creating new Account</string>
    <string name="open_branches_section">open branches section</string>
    <string name="branches_title">Branches</string>
    <string name="customers_title">Customers</string>
    <string name="sales_team_title">Sales Team</string>
    <string name="reports_title">Reports</string>
    <string name="offline_data">Offline data</string>
    <string name="offline_data_title">Offline Data</string>
    <string name="offline_data_msg">All your local data will upload to company server when you back online, or you can press on upload icon if you have a stable internet connection.</string>
    <string name="upload_data">upload data</string>
    <string name="all_branches_header_text">Long click on any sales member name to view actions</string>
    <string name="branch_menu">branch menu</string>
    <string name="delete_sales_member">Delete Sales Member</string>
    <string name="disable_sales_member">disable sales member</string>
    <string name="move_to">Move To</string>
    <string name="delete">Delete</string>
    <string name="disable">Disable</string>
    <string name="choose_branch">Choose Branch</string>
    <string name="move">Move</string>
    <string name="move_sales_member_to_another_branch">Move %1$s</string>
    <string name="check_mark">check mark</string>
    <string name="status">Status</string>
    <string name="status_enabled">Enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="disable_sales_msg">Disabled sales members can\'t add new customers or visits to existing customers, are you sure you want to continue ?</string>
    <string name="disable_sales_title">Disable Sales Member</string>
    <string name="enable">Enable</string>
    <string name="your_account_has_been_disabled">Your Account Has Been Disabled</string>
    <string name="disabled_msg">Your account has been disabled, connect your manager for more information.</string>
    <string name="sales_member_delete_failed_msg">You can\'t delete any sales member that has one or more customers, you should move or delete any customer belong to this sales member before deletion process.</string>
    <string name="invitation_request">Please ask your supervisor or your manager for the invitation link, we need this invitation link in order to connect you with the company profile.</string>
    <string name="all_customers">Customers</string>
    <string name="add_salesman">Add Salesman</string>
    <string name="share_invitation_link">Share Invitation Link</string>
    <string name="new_salesman_header">New Salesman</string>
    <string name="type_the_salesman_info">Type the salesman name, select the branch that he belong\'s to, then share the invitation link with him.</string>
    <string name="sort_group">Sort By</string>
</resources>