<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_transfer"
        android:title="@string/move_to"
        android:showAsAction="never"
        android:iconTint="@color/black"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/action_disable"
        android:icon="@drawable/ic_cancel"
        android:showAsAction="never"
        android:iconTint="@color/black"
        android:orderInCategory="2"
        android:title="@string/disable" />

    <item
        android:id="@+id/action_enable"
        android:icon="@drawable/ic_cancel"
        android:showAsAction="never"
        android:iconTint="@color/black"
        android:orderInCategory="3"
        android:title="@string/enable" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="@color/black"
        android:showAsAction="never"
        android:orderInCategory="4"
        android:title="@string/delete" />
</menu>