<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/photo_background_protection"
        tools:context=".ui.auth.Fragment_Splash_Screen">

        <ImageView
            android:id="@+id/app_logo_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="top|center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_logo_dsc"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo"
            android:transitionName="@string/logo_image"
            app:layout_constraintBottom_toTopOf="@+id/app_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/white2"
            app:layout_constraintBottom_toTopOf="@+id/slogan_text"
            app:layout_constraintEnd_toEndOf="@+id/app_logo_image"
            app:layout_constraintStart_toStartOf="@+id/app_logo_image"
            app:layout_constraintTop_toBottomOf="@+id/app_logo_image" />

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/slogan"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/white2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/app_name_text"
            app:layout_constraintStart_toStartOf="@+id/app_name_text"
            app:layout_constraintTop_toBottomOf="@+id/app_name_text"
            app:layout_constraintVertical_bias="0.506"
            app:layout_constraintVertical_chainStyle="packed" />


        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_marginBottom="16dp"
            android:indeterminateBehavior="repeat"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/slogan_text"
            app:layout_constraintStart_toStartOf="@+id/slogan_text"
            app:layout_constraintTop_toBottomOf="@+id/slogan_text"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
