<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="empty"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/photo_background_protection">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.auth.Fragment_select_user_type">


            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/select_your_position"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/white2"
                app:layout_constraintBottom_toTopOf="@+id/headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/please_select_your_position"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white2"
                app:layout_constraintBottom_toTopOf="@+id/name_inputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/white2"
                app:boxCornerRadiusBottomEnd="6dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:boxCornerRadiusTopEnd="6dp"
                app:boxCornerRadiusTopStart="6dp"
                app:boxStrokeColor="@color/white2"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:helperText="@string/name_helper_text"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:helperTextTextColor="@color/white2"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
                app:hintTextColor="@color/white2"
                app:layout_constraintBottom_toTopOf="@+id/position_info_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headline"
                app:userNameValidation="@{empty}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:textColor="@color/white2"
                    android:textColorHint="@color/white2" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/position_info_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/name_inputLayout"
                app:layout_constraintStart_toStartOf="@+id/name_inputLayout"
                app:layout_constraintTop_toBottomOf="@+id/name_inputLayout"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/choose_type_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:hint="@string/choose_your_position"
                    android:textColorHint="@color/white2"
                    app:boxCornerRadiusBottomEnd="6dp"
                    app:boxCornerRadiusBottomStart="6dp"
                    app:boxCornerRadiusTopEnd="6dp"
                    app:boxCornerRadiusTopStart="6dp"
                    app:boxStrokeColor="@color/white2"
                    app:boxStrokeWidth="1dp"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:hintTextColor="@color/white2">

                    <AutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:textColor="@color/white2"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:id="@+id/company_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/company_name_inputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:hint="@string/company_name"
                        android:textColorHint="@color/white2"
                        app:boxCornerRadiusBottomEnd="6dp"
                        app:boxCornerRadiusBottomStart="6dp"
                        app:boxCornerRadiusTopEnd="6dp"
                        app:boxCornerRadiusTopStart="6dp"
                        app:boxStrokeColor="@color/white2"
                        app:boxStrokeWidth="1dp"
                        app:companyNameValidation="@{empty}"
                        app:errorEnabled="true"
                        app:errorTextColor="@android:color/holo_red_dark"
                        app:helperText="@string/please_type_company_name"
                        app:helperTextEnabled="true"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        app:helperTextTextColor="@color/white2"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
                        app:hintTextColor="@color/white2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_company_name"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:inputType="text"
                            android:maxLength="200"
                            android:maxLines="1"
                            android:textColor="@color/white2"
                            android:textColorHint="@color/white2" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sales_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/brand_frame">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:text="@string/invitation_request"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/white" />


                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm_info"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorPrimary"
                    android:elevation="6dp"
                    android:enabled="false"
                    android:text="@string/confirm" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
